Fixed bug #75451 (Assertion fails while foreach on empty xpath query)